// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cells with html renders a table with colgroups 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label id"
      aria-owns="id_listbox"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <div
      class="react-combo-boxes-dropdown__listbox-wrapper"
    >
      <div
        class="react-combo-boxes-dropdown__listbox react-combo-boxes-dropdown__false"
        hidden=""
        tabindex="-1"
      >
        <table
          aria-labelledby="id-label"
          class="react-combo-boxes-dropdown__table"
          id="id_listbox"
          role="listbox"
          tabindex="-1"
        >
          <colgroup>
            <col />
            <col />
          </colgroup>
          <tbody
            role="presentation"
          >
            <tr
              aria-selected="true"
              class="react-combo-boxes-dropdown__table-row"
              id="id_option_apple"
              role="option"
              tabindex="-1"
            >
              <td
                class="foo"
                role="presentation"
              >
                Apple
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
              <td
                class="bar"
                role="presentation"
              >
                Fruit
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
            </tr>
            <tr
              class="react-combo-boxes-dropdown__table-row"
              id="id_option_banana"
              role="option"
              tabindex="-1"
            >
              <td
                class="foo"
                role="presentation"
              >
                Banana
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
              <td
                class="bar"
                role="presentation"
              >
                Fruit
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
            </tr>
            <tr
              class="react-combo-boxes-dropdown__table-row"
              id="id_option_potato"
              role="option"
              tabindex="-1"
            >
              <td
                class="foo"
                role="presentation"
              >
                Potato
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
              <td
                class="bar"
                role="presentation"
              >
                Vegetable
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`columns as names only renders a table as the list box 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label id"
      aria-owns="id_listbox"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <div
      class="react-combo-boxes-dropdown__listbox-wrapper"
    >
      <div
        class="react-combo-boxes-dropdown__listbox react-combo-boxes-dropdown__false"
        hidden=""
        tabindex="-1"
      >
        <table
          aria-labelledby="id-label"
          class="react-combo-boxes-dropdown__table"
          id="id_listbox"
          role="listbox"
          tabindex="-1"
        >
          <colgroup>
            <col />
            <col />
          </colgroup>
          <tbody
            role="presentation"
          >
            <tr
              aria-selected="true"
              class="react-combo-boxes-dropdown__table-row"
              id="id_option_apple"
              role="option"
              tabindex="-1"
            >
              <td
                class="react-combo-boxes-dropdown__table-cell"
                role="presentation"
              >
                Apple
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
              <td
                class="react-combo-boxes-dropdown__table-cell"
                role="presentation"
              >
                Fruit
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
            </tr>
            <tr
              class="react-combo-boxes-dropdown__table-row"
              id="id_option_banana"
              role="option"
              tabindex="-1"
            >
              <td
                class="react-combo-boxes-dropdown__table-cell"
                role="presentation"
              >
                Banana
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
              <td
                class="react-combo-boxes-dropdown__table-cell"
                role="presentation"
              >
                Fruit
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
            </tr>
            <tr
              class="react-combo-boxes-dropdown__table-row"
              id="id_option_potato"
              role="option"
              tabindex="-1"
            >
              <td
                class="react-combo-boxes-dropdown__table-cell"
                role="presentation"
              >
                Potato
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
              <td
                class="react-combo-boxes-dropdown__table-cell"
                role="presentation"
              >
                Vegetable
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
            </tr>
            <tr
              aria-disabled="true"
              class="react-combo-boxes-dropdown__table-row"
              id="id_option_tomato"
              role="option"
              tabindex="-1"
            >
              <td
                class="react-combo-boxes-dropdown__table-cell"
                role="presentation"
              >
                Tomato
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
              <td
                class="react-combo-boxes-dropdown__table-cell"
                role="presentation"
              >
                Vegetable
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`columns with headers renders a table with headers 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label id"
      aria-owns="id_listbox"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <div
      class="react-combo-boxes-dropdown__listbox-wrapper"
    >
      <div
        class="react-combo-boxes-dropdown__listbox react-combo-boxes-dropdown__listbox--header"
        hidden=""
        tabindex="-1"
      >
        <table
          aria-labelledby="id-label"
          class="react-combo-boxes-dropdown__table"
          id="id_listbox"
          role="listbox"
          tabindex="-1"
        >
          <colgroup>
            <col />
            <col />
          </colgroup>
          <thead
            role="presentation"
          >
            <tr
              role="presentation"
            >
              <th
                aria-hidden="true"
                class="react-combo-boxes-dropdown__table-header"
              >
                Name
              </th>
              <th
                aria-hidden="true"
                class="react-combo-boxes-dropdown__table-header"
              >
                Type
              </th>
            </tr>
          </thead>
          <tbody
            role="presentation"
          >
            <tr
              aria-selected="true"
              class="react-combo-boxes-dropdown__table-row"
              id="id_option_apple"
              role="option"
              tabindex="-1"
            >
              <td
                class="react-combo-boxes-dropdown__table-cell"
                role="presentation"
              >
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                  Name 
                </span>
                Apple
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
              <td
                class="react-combo-boxes-dropdown__table-cell"
                role="presentation"
              >
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                  Type 
                </span>
                Fruit
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
            </tr>
            <tr
              class="react-combo-boxes-dropdown__table-row"
              id="id_option_banana"
              role="option"
              tabindex="-1"
            >
              <td
                class="react-combo-boxes-dropdown__table-cell"
                role="presentation"
              >
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                  Name 
                </span>
                Banana
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
              <td
                class="react-combo-boxes-dropdown__table-cell"
                role="presentation"
              >
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                  Type 
                </span>
                Fruit
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
            </tr>
            <tr
              class="react-combo-boxes-dropdown__table-row"
              id="id_option_potato"
              role="option"
              tabindex="-1"
            >
              <td
                class="react-combo-boxes-dropdown__table-cell"
                role="presentation"
              >
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                  Name 
                </span>
                Potato
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
              <td
                class="react-combo-boxes-dropdown__table-cell"
                role="presentation"
              >
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                  Type 
                </span>
                Vegetable
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`columns with html renders a table with colgroups 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label id"
      aria-owns="id_listbox"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <div
      class="react-combo-boxes-dropdown__listbox-wrapper"
    >
      <div
        class="react-combo-boxes-dropdown__listbox react-combo-boxes-dropdown__false"
        hidden=""
        tabindex="-1"
      >
        <table
          aria-labelledby="id-label"
          class="react-combo-boxes-dropdown__table"
          id="id_listbox"
          role="listbox"
          tabindex="-1"
        >
          <colgroup>
            <col
              class="foo"
            />
            <col
              class="bar"
            />
          </colgroup>
          <tbody
            role="presentation"
          >
            <tr
              aria-selected="true"
              class="react-combo-boxes-dropdown__table-row"
              id="id_option_apple"
              role="option"
              tabindex="-1"
            >
              <td
                class="react-combo-boxes-dropdown__table-cell"
                role="presentation"
              >
                Apple
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
              <td
                class="react-combo-boxes-dropdown__table-cell"
                role="presentation"
              >
                Fruit
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
            </tr>
            <tr
              class="react-combo-boxes-dropdown__table-row"
              id="id_option_banana"
              role="option"
              tabindex="-1"
            >
              <td
                class="react-combo-boxes-dropdown__table-cell"
                role="presentation"
              >
                Banana
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
              <td
                class="react-combo-boxes-dropdown__table-cell"
                role="presentation"
              >
                Fruit
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
            </tr>
            <tr
              class="react-combo-boxes-dropdown__table-row"
              id="id_option_potato"
              role="option"
              tabindex="-1"
            >
              <td
                class="react-combo-boxes-dropdown__table-cell"
                role="presentation"
              >
                Potato
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
              <td
                class="react-combo-boxes-dropdown__table-cell"
                role="presentation"
              >
                Vegetable
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;

exports[`grouped renders a table with groups 1`] = `
<div>
  <div
    class="react-combo-boxes-dropdown"
  >
    <div
      aria-describedby="id_aria_description"
      aria-expanded="false"
      aria-labelledby="id-label id"
      aria-owns="id_listbox"
      class="react-combo-boxes-dropdown__combobox"
      id="id"
      role="combobox"
      tabindex="0"
    >
      Apple
    </div>
    <div
      class="react-combo-boxes-dropdown__listbox-wrapper"
    >
      <div
        class="react-combo-boxes-dropdown__listbox react-combo-boxes-dropdown__false"
        hidden=""
        tabindex="-1"
      >
        <table
          aria-labelledby="id-label"
          class="react-combo-boxes-dropdown__table"
          id="id_listbox"
          role="listbox"
          tabindex="-1"
        >
          <colgroup>
            <col />
            <col />
          </colgroup>
          <tbody
            role="presentation"
          >
            <tr
              class="react-combo-boxes-dropdown__table-group-row"
            >
              <th
                aria-hidden="true"
                class="react-combo-boxes-dropdown__table-group-header"
                colspan="2"
              >
                Fruit
              </th>
            </tr>
            <tr
              aria-selected="true"
              class="react-combo-boxes-dropdown__table-row"
              id="id_option_apple"
              role="option"
              tabindex="-1"
            >
              <td
                class="react-combo-boxes-dropdown__table-cell"
                role="presentation"
              >
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                  Fruit 
                </span>
                Apple
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
              <td
                class="react-combo-boxes-dropdown__table-cell"
                role="presentation"
              >
                Green
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
            </tr>
            <tr
              class="react-combo-boxes-dropdown__table-row"
              id="id_option_banana"
              role="option"
              tabindex="-1"
            >
              <td
                class="react-combo-boxes-dropdown__table-cell"
                role="presentation"
              >
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                  Fruit 
                </span>
                Banana
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
              <td
                class="react-combo-boxes-dropdown__table-cell"
                role="presentation"
              >
                Yellow
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
            </tr>
            <tr
              class="react-combo-boxes-dropdown__table-group-row"
            >
              <th
                aria-hidden="true"
                class="react-combo-boxes-dropdown__table-group-header"
                colspan="2"
              >
                Vegetable
              </th>
            </tr>
            <tr
              class="react-combo-boxes-dropdown__table-row"
              id="id_option_potato"
              role="option"
              tabindex="-1"
            >
              <td
                class="react-combo-boxes-dropdown__table-cell"
                role="presentation"
              >
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                  Vegetable 
                </span>
                Potato
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
              <td
                class="react-combo-boxes-dropdown__table-cell"
                role="presentation"
              >
                Brown
                <span
                  class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
                >
                   
                </span>
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
      id="id_aria_description"
    >
      When results are available use up and down arrows to review and enter to select
    </div>
    <div
      class="visually-hidden visuallyhidden sr-only react-combo-boxes-sr-only"
    >
      <div
        aria-atomic="true"
        aria-live="polite"
        role="status"
      >
        <div />
      </div>
    </div>
  </div>
</div>
`;
